[gd_scene load_steps=40 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screenshot 2023-11-03 115809.png" type="Texture" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://ytmp3free.cc_the-amazing-digital-circus-pilot-youtubemp3free.org.mp3" type="AudioStream" id=6]
[ext_resource path="res://ytmp3free.cc_roblox-ouch-sound-youtubemp3free.org.mp3" type="AudioStream" id=7]
[ext_resource path="res://Chill-Minecraft-Hypixel-parkour-gameplay-for-commentary_-_free-to-use_.ogv.ogv" type="VideoStream" id=8]
[ext_resource path="res://Subway-Surfer-Highscore-10512290-World-Record-_.ogv" type="VideoStream" id=9]
[ext_resource path="res://VideoPlayer4.gd" type="Script" id=10]
[ext_resource path="res://sad spongebob transition meme but its high quality (1).ogv" type="VideoStream" id=11]
[ext_resource path="res://WE TRICKED POMNI! ðŸ˜‚ shorts THE AMAZING DIGITAL CIRCUS (1).ogv" type="VideoStream" id=12]
[ext_resource path="res://VideoPlayer3.gd" type="Script" id=13]
[ext_resource path="res://VideoPlayer5.gd" type="Script" id=14]
[ext_resource path="res://Jax (The Amazing Digital Circus) Edit (1).ogv" type="VideoStream" id=15]
[ext_resource path="res://ðŸ¤¯FIND CORRECT HEAD - ðŸŽªAmazing Digital Circus x ðŸš½Skibidi Toilet (1).ogv" type="VideoStream" id=16]
[ext_resource path="res://VideoPlayer6.gd" type="Script" id=17]
[ext_resource path="res://playing osu while my parents are arguing.ogv" type="VideoStream" id=18]
[ext_resource path="res://VideoPlayer7.gd" type="Script" id=19]
[ext_resource path="res://VideoPlayer8.gd" type="Script" id=20]
[ext_resource path="res://osaka section 8 (repost).ogv" type="VideoStream" id=21]
[ext_resource path="res://VideoPlayer9.gd" type="Script" id=22]
[ext_resource path="res://Devils and angels.ogv" type="VideoStream" id=23]
[ext_resource path="res://VideoPlayer10.gd" type="Script" id=24]
[ext_resource path="res://SpongeBob Employee of The Month 04.ogv" type="VideoStream" id=25]
[ext_resource path="res://VideoPlayer11.gd" type="Script" id=26]
[ext_resource path="res://roblox tragedy.ogv" type="VideoStream" id=27]
[ext_resource path="res://VideoPlayer12.gd" type="Script" id=28]
[ext_resource path="res://VideoPlayer13.gd" type="Script" id=29]
[ext_resource path="res://roblox tragedy (1).ogv" type="VideoStream" id=30]
[ext_resource path="res://roblox rp.ogv" type="VideoStream" id=31]
[ext_resource path="res://videoplayback (1).ogv" type="VideoStream" id=32]
[ext_resource path="res://VideoPlayer14.gd" type="Script" id=33]
[ext_resource path="res://Discord Ping Sound Effect (320 kbps).mp3" type="AudioStream" id=34]
[ext_resource path="res://ad.png" type="Texture" id=35]
[ext_resource path="res://ad4.png" type="Texture" id=36]
[ext_resource path="res://ad5.png" type="Texture" id=37]
[ext_resource path="res://ad2.png" type="Texture" id=38]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1904, 8, 0, 0, 0, 0, 1904, 1088, 0, 0, 0, 0, 8, 1088, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="sad spongebob" type="VideoPlayer" parent="."]
margin_left = 714.0
margin_top = 294.0
margin_right = 754.0
margin_bottom = 334.0
rect_scale = Vector2( 11.3313, 6.35794 )
stream = ExtResource( 11 )
volume_db = -80.0
autoplay = true
script = ExtResource( 10 )

[node name="minecraft parkour" type="VideoPlayer" parent="."]
margin_left = 1339.0
margin_top = -1.0
margin_right = 1906.0
margin_bottom = 387.0
stream = ExtResource( 8 )
volume_db = -80.0
autoplay = true

[node name="subway surfers" type="VideoPlayer" parent="."]
margin_left = 15.0
margin_top = 519.0
margin_right = 55.0
margin_bottom = 559.0
rect_scale = Vector2( 8.06154, 14.16 )
stream = ExtResource( 9 )
volume_db = -80.0
autoplay = true

[node name="we tricked pomni" type="VideoPlayer" parent="."]
margin_left = 8.0
margin_top = -2.0
margin_right = 48.0
margin_bottom = 38.0
rect_scale = Vector2( 5.63247, 8.90985 )
stream = ExtResource( 12 )
volume_db = -80.0
autoplay = true
script = ExtResource( 13 )

[node name="jax edit" type="VideoPlayer" parent="."]
margin_left = 1630.0
margin_top = 530.0
margin_right = 1670.0
margin_bottom = 570.0
rect_rotation = 19.1167
rect_scale = Vector2( 6.81423, 10.7651 )
stream = ExtResource( 15 )
volume_db = -80.0
autoplay = true
script = ExtResource( 14 )

[node name="skibidi toilet" type="VideoPlayer" parent="."]
margin_left = 678.0
margin_top = 176.0
margin_right = 718.0
margin_bottom = 216.0
rect_rotation = 166.719
rect_scale = Vector2( 6.61471, 5.91924 )
stream = ExtResource( 16 )
volume_db = -80.0
autoplay = true
script = ExtResource( 17 )

[node name="playing osu while my parents are arguing" type="VideoPlayer" parent="."]
margin_left = 384.0
margin_top = 774.0
margin_right = 424.0
margin_bottom = 814.0
rect_scale = Vector2( 12.1423, 6.7001 )
stream = ExtResource( 18 )
volume_db = -80.0
autoplay = true
script = ExtResource( 19 )

[node name="osaka section 8" type="VideoPlayer" parent="."]
margin_left = 1000.0
margin_top = 766.0
margin_right = 1040.0
margin_bottom = 806.0
rect_scale = Vector2( 9.39984, 6.7687 )
stream = ExtResource( 21 )
volume_db = -80.0
autoplay = true
script = ExtResource( 20 )

[node name="gacha life" type="VideoPlayer" parent="."]
margin_left = 650.0
margin_top = 270.0
margin_right = 690.0
margin_bottom = 310.0
rect_scale = Vector2( -7.99069, 5.4022 )
stream = ExtResource( 23 )
volume_db = -80.0
script = ExtResource( 22 )

[node name="spongebob full episode" type="VideoPlayer" parent="."]
margin_left = 854.0
margin_top = -2.0
margin_right = 894.0
margin_bottom = 38.0
rect_rotation = 3.76183
rect_scale = Vector2( 9.89035, 5.66448 )
stream = ExtResource( 25 )
volume_db = -80.0
autoplay = true
script = ExtResource( 24 )

[node name="roblox car crash" type="VideoPlayer" parent="."]
margin_left = 790.0
margin_top = 530.0
margin_right = 830.0
margin_bottom = 570.0
rect_scale = Vector2( 9.68005, 5.35709 )
stream = ExtResource( 27 )
volume_db = -80.0
autoplay = true
script = ExtResource( 26 )

[node name="roblox car crash 2" type="VideoPlayer" parent="."]
margin_left = 1190.0
margin_top = 390.0
margin_right = 1230.0
margin_bottom = 430.0
rect_scale = Vector2( 9.96965, 5.03072 )
stream = ExtResource( 30 )
volume_db = -80.0
autoplay = true
script = ExtResource( 28 )

[node name="roblox horror" type="VideoPlayer" parent="."]
margin_left = 1192.0
margin_top = 600.0
margin_right = 1232.0
margin_bottom = 640.0
rect_scale = Vector2( 8.39878, 5.08544 )
stream = ExtResource( 31 )
volume_db = -80.0
autoplay = true
script = ExtResource( 29 )

[node name="roblox car crash3" type="VideoPlayer" parent="."]
margin_left = 368.0
margin_top = 512.0
margin_right = 408.0
margin_bottom = 552.0
rect_scale = Vector2( 7.98098, 5.75093 )
stream = ExtResource( 32 )
volume_db = -80.0
autoplay = true
script = ExtResource( 33 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 540 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.00420166

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Screenshot2023-11-03115809" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 947.75, 541.5 )
scale = Vector2( 3.89554, 3.97464 )
texture = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.622
pitch_scale = 1.5
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 24.0

[node name="Ad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = 24.0

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 876.0
margin_top = 70.0
margin_right = 1479.0
margin_bottom = 478.0
rect_scale = Vector2( 1.20455, 1.257 )
icon = ExtResource( 38 )

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 436.0
margin_top = 128.0
margin_right = 1511.0
margin_bottom = 960.0
icon = ExtResource( 37 )

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 666.0
margin_top = 76.0
margin_right = 1045.0
margin_bottom = 391.0
rect_scale = Vector2( 2.491, 2.86874 )
icon = ExtResource( 36 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 284.0
margin_top = 194.0
margin_right = 1656.0
margin_bottom = 1159.0
rect_scale = Vector2( 0.547202, 0.563296 )
icon = ExtResource( 35 )

[node name="Timer4" type="Timer" parent="."]
wait_time = 14.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
